[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Scripts/Orc.gd" type="Script" id=1]
[ext_resource path="res://Art/Textures/Monsters/Monster_Dissolve.png" type="Texture" id=2]
[ext_resource path="res://Art/Textures/Monsters/Monster_Walk2.png" type="Texture" id=3]
[ext_resource path="res://Art/Textures/Monsters/Monster_Walk1.png" type="Texture" id=4]
[ext_resource path="res://Art/Textures/Monsters/Monster_Idle.png" type="Texture" id=5]
[ext_resource path="res://Art/Sound/FX/506588__mrthenoronha__kill-enemy-8-bit.wav" type="AudioStream" id=6]
[ext_resource path="res://Art/Sound/FX/214050__taira-komori__magic02.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Dissolve",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 30.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 30.5 )

[sub_resource type="Animation" id=11]
resource_name = "HeathbarDecreaseTo0"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.972549, -0.25, 0, 0.25, 0, 0.694118, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.796078, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 16 ), Vector2( 0, 16 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.00392157, -0.25, 0, 0.25, 0, 0.972549, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.537255, -0.25, 0, 0.25, 0, 0.796078, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.164706, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 16 ), Vector2( 40, 16 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.00392157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.537255, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.164706, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80, 16 ) ]
}

[node name="Orc" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.90735e-06, -1.90735e-06 )
scale = Vector2( 8, 8 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 33 )
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -33 )
shape = SubResource( 3 )

[node name="SidesChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( -26, 1.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( 26, 1.5 )
shape = SubResource( 8 )

[node name="TopHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0
pitch_scale = 0.77

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -30.666
pitch_scale = 1.07

[node name="Healthbar" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Healthbar"]
margin_left = -40.0
margin_top = -56.0
margin_right = 40.0
margin_bottom = -40.0
color = Color( 0.223529, 0.247059, 0.282353, 1 )

[node name="ColorRect" type="ColorRect" parent="Healthbar"]
margin_left = -40.0
margin_top = -56.0
margin_right = 40.0
margin_bottom = -40.0
color = Color( 0.00392157, 0.537255, 0.164706, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Healthbar"]
autoplay = "RESET"
anims/HeathbarDecreaseTo0 = SubResource( 11 )
anims/HeathbarDecreaseTo0.5 = SubResource( 9 )
anims/RESET = SubResource( 10 )

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_SidesChecker_body_entered"]
